// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PensionsCard renders confirmed card correctly 1`] = `
<div>
  <div
    class="t-information-callout rounded-bl-3xl border-blue-700 border-2"
    data-testid="information-callout"
  >
    <h3
      class="text-white bg-blue-700 flex items-center px-2 md:px-5 pt-1 pb-2 mb-0 text-base font-normal tracking-[0.01125rem] md:text-base"
      data-testid="pension-card-type"
    >
      <svgr-mock
        class="w-[24px] h-[24px] mr-2 flex-shrink-0"
      />
      <span
        class="min-w-0 break-words"
      >
        components.pension-card.type.SP
      </span>
    </h3>
    <div
      class="px-4 pt-4 md:pt-5 md:px-6 pb-7"
    >
      <h4
        class="text-xl md:text-2xl text-blue-700 font-bold my-0 break-words"
        data-testid="pension-card-scheme-name"
      >
        Test Scheme
      </h4>
      <div
        class="pb-4 mt-4 border-b-1 border-slate-400"
      >
        <img
          alt="site.hm-gov-logo-alt"
          data-nimg="1"
          decoding="async"
          height="28"
          loading="lazy"
          src="/_next/image?url=%2Fimages%2Fhm-gov-logo.png&w=384&q=75"
          srcset="/_next/image?url=%2Fimages%2Fhm-gov-logo.png&w=256&q=75 1x, /_next/image?url=%2Fimages%2Fhm-gov-logo.png&w=384&q=75 2x"
          style="color: transparent;"
          width="188"
        />
      </div>
      <dl
        class="mt-2"
      >
        <dt
          class="mb-0 font-normal text-gray-650"
        >
          common.employer:
        </dt>
        <dd
          class="pb-2 mb-2 break-words border-b-1 border-slate-400"
          data-testid="pension-card-employer-name"
        >
          Employer 1
        </dd>
        <dt
          class="mb-0 font-normal text-gray-650"
        >
          common.state-pension-date:
        </dt>
        <dd
          class="pb-2 mb-2 break-words border-b-1 border-slate-400"
          data-testid="pension-card-retirement-date"
        >
          1 January 2025
        </dd>
        <dt
          class="mb-0 font-normal text-gray-650"
        >
          common.estimated-income:
        </dt>
        <dd
          class="pb-2 mb-2 break-words border-b-1 border-slate-400"
          data-testid="pension-card-monthly-amount"
        >
          <strong
            class="mr-2 text-[24px]"
          >
            £412
          </strong>
          common.a-month
        </dd>
      </dl>
      <form
        class="mt-4"
        method="POST"
      >
        <input
          name="pensionId"
          type="hidden"
          value="12345"
        />
        <input
          name="locale"
          type="hidden"
          value="en"
        />
        <input
          name="pensionType"
          type="hidden"
          value="SP"
        />
        <button
          class="border-0 text-white bg-magenta-500 hover:bg-pink-800 active:bg-pink-900 active:outline-yellow-400 active:text-white t-button relative px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-400 disabled:shadow-none focus:bg-yellow-400 focus:outline-blue-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none focus:before:content-[""] focus:before:w-[calc(100%+6px)] focus:before:rounded-[0.45rem] focus:before:absolute focus:before:inset-0 focus:before:inset-x-[-3px] focus:before:inset-y-[-3px] focus:before:shadow-bottom-gray active:outline-[3px] active:outline-offset-0 active:shadow-inset active:before:content-[""] active:before:w-[calc(100%+6px)] active:before:rounded-[0.45rem] active:before:absolute active:before:inset-0 active:before:inset-x-[-3px] active:before:inset-y-[-3px] active:before:shadow-bottom-white t-primary-button w-full md:w-auto"
          data-testid="details-link"
          formaction="/api/set-pension-id"
          type="submit"
        >
          <span />
          common.details-link
          <span
            class="sr-only"
          >
             for Test Scheme
          </span>
          <span />
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`PensionsCard renders confirmed no income card correctly 1`] = `
<div>
  <div
    class="t-information-callout rounded-bl-3xl border-teal-700 border-2"
    data-testid="information-callout"
  >
    <h3
      class="text-white bg-teal-700 flex items-center px-2 md:px-5 pt-1 pb-2 mb-0 text-base font-normal tracking-[0.01125rem] md:text-base"
      data-testid="pension-card-type"
    >
      <svgr-mock
        class="w-[24px] h-[24px] mr-2 flex-shrink-0"
      />
      <span
        class="min-w-0 break-words"
      >
        components.pension-card.type.DC
      </span>
    </h3>
    <div
      class="px-4 pt-4 md:pt-5 md:px-6 pb-7"
    >
      <h4
        class="text-xl md:text-2xl text-blue-700 font-bold my-0 break-words"
        data-testid="pension-card-scheme-name"
      >
        Test Scheme
      </h4>
      <dl
        class="mt-2"
      >
        <dt
          class="mb-0 font-normal text-gray-650"
        >
          common.provider:
        </dt>
        <dd
          class="pb-2 mb-2 break-words border-b-1 border-slate-400"
          data-testid="pension-card-administrator-name"
        >
          Admin Name
        </dd>
        <dt
          class="mb-0 font-normal text-gray-650"
        >
          common.employer:
        </dt>
        <dd
          class="pb-2 mb-2 break-words border-b-1 border-slate-400"
          data-testid="pension-card-employer-name"
        >
          Employer 1
        </dd>
        <dt
          class="mb-0 font-normal text-gray-650"
        >
          common.retirement-date:
        </dt>
        <dd
          class="pb-2 mb-2 break-words border-b-1 border-slate-400"
          data-testid="pension-card-retirement-date"
        >
          27 March 2051
        </dd>
      </dl>
      <form
        class="mt-4"
        method="POST"
      >
        <input
          name="pensionId"
          type="hidden"
          value="12345"
        />
        <input
          name="locale"
          type="hidden"
          value="en"
        />
        <input
          name="pensionType"
          type="hidden"
          value="DC"
        />
        <button
          class="border-0 text-white bg-magenta-500 hover:bg-pink-800 active:bg-pink-900 active:outline-yellow-400 active:text-white t-button relative px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-400 disabled:shadow-none focus:bg-yellow-400 focus:outline-blue-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none focus:before:content-[""] focus:before:w-[calc(100%+6px)] focus:before:rounded-[0.45rem] focus:before:absolute focus:before:inset-0 focus:before:inset-x-[-3px] focus:before:inset-y-[-3px] focus:before:shadow-bottom-gray active:outline-[3px] active:outline-offset-0 active:shadow-inset active:before:content-[""] active:before:w-[calc(100%+6px)] active:before:rounded-[0.45rem] active:before:absolute active:before:inset-0 active:before:inset-x-[-3px] active:before:inset-y-[-3px] active:before:shadow-bottom-white t-primary-button w-full md:w-auto"
          data-testid="details-link"
          formaction="/api/set-pension-id"
          type="submit"
        >
          <span />
          common.details-link
          <span
            class="sr-only"
          >
             for Test Scheme
          </span>
          <span />
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`PensionsCard renders pending card for NEW correctly 1`] = `
<div>
  <div
    class="t-information-callout rounded-bl-3xl border-teal-700 border-2"
    data-testid="information-callout"
  >
    <h3
      class="text-white bg-teal-700 flex items-center px-2 md:px-5 pt-1 pb-2 mb-0 text-base font-normal tracking-[0.01125rem] md:text-base"
      data-testid="pension-card-type"
    >
      <svgr-mock
        class="w-[24px] h-[24px] mr-2 flex-shrink-0"
      />
      <span
        class="min-w-0 break-words"
      >
        components.pension-card.type.DC
      </span>
    </h3>
    <div
      class="px-4 pt-4 md:pt-5 md:px-6 pb-7"
    >
      <h4
        class="text-xl md:text-2xl text-blue-700 font-bold my-0 break-words"
        data-testid="pension-card-scheme-name"
      >
        Test Scheme
      </h4>
      <dl
        class="mt-2"
      >
        <dt
          class="mb-0 font-normal text-gray-650"
        >
          common.provider:
        </dt>
        <dd
          class="pb-2 mb-2 break-words border-b-1 border-slate-400"
          data-testid="pension-card-administrator-name"
        >
          Admin Name
        </dd>
        <dt
          class="mb-0 font-normal text-gray-650"
        >
          common.employer:
        </dt>
        <dd
          class="pb-2 mb-2 break-words border-b-1 border-slate-400"
          data-testid="pension-card-employer-name"
        >
          Employer 1
        </dd>
        <dt
          class="mb-0 font-normal text-gray-650"
        >
          common.retirement-date:
        </dt>
        <dd
          class="pb-2 mb-2 break-words border-b-1 border-slate-400"
          data-testid="pension-card-retirement-date"
        >
          1 January 2025
        </dd>
      </dl>
      <form
        class="mt-4"
        method="POST"
      >
        <input
          name="pensionId"
          type="hidden"
          value="12345"
        />
        <input
          name="locale"
          type="hidden"
          value="en"
        />
        <input
          name="pensionType"
          type="hidden"
          value="DC"
        />
        <button
          class="border-0 text-white bg-magenta-500 hover:bg-pink-800 active:bg-pink-900 active:outline-yellow-400 active:text-white t-button relative px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-400 disabled:shadow-none focus:bg-yellow-400 focus:outline-blue-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none focus:before:content-[""] focus:before:w-[calc(100%+6px)] focus:before:rounded-[0.45rem] focus:before:absolute focus:before:inset-0 focus:before:inset-x-[-3px] focus:before:inset-y-[-3px] focus:before:shadow-bottom-gray active:outline-[3px] active:outline-offset-0 active:shadow-inset active:before:content-[""] active:before:w-[calc(100%+6px)] active:before:rounded-[0.45rem] active:before:absolute active:before:inset-0 active:before:inset-x-[-3px] active:before:inset-y-[-3px] active:before:shadow-bottom-white t-primary-button w-full md:w-auto"
          data-testid="details-link"
          formaction="/api/set-pension-id"
          type="submit"
        >
          <span />
          common.details-link
          <span
            class="sr-only"
          >
             for Test Scheme
          </span>
          <span />
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`PensionsCard renders pending card for SYS correctly 1`] = `
<div>
  <div
    class="t-information-callout rounded-bl-3xl border-teal-700 border-2"
    data-testid="information-callout"
  >
    <h3
      class="text-white bg-teal-700 flex items-center px-2 md:px-5 pt-1 pb-2 mb-0 text-base font-normal tracking-[0.01125rem] md:text-base"
      data-testid="pension-card-type"
    >
      <svgr-mock
        class="w-[24px] h-[24px] mr-2 flex-shrink-0"
      />
      <span
        class="min-w-0 break-words"
      >
        components.pension-card.type.DC
      </span>
    </h3>
    <div
      class="px-4 pt-4 md:pt-5 md:px-6 pb-7"
    >
      <h4
        class="text-xl md:text-2xl text-blue-700 font-bold my-0 break-words"
        data-testid="pension-card-scheme-name"
      >
        Test Scheme
      </h4>
      <dl
        class="mt-2"
      >
        <dt
          class="mb-0 font-normal text-gray-650"
        >
          common.provider:
        </dt>
        <dd
          class="pb-2 mb-2 break-words border-b-1 border-slate-400"
          data-testid="pension-card-administrator-name"
        >
          Admin Name
        </dd>
        <dt
          class="mb-0 font-normal text-gray-650"
        >
          common.employer:
        </dt>
        <dd
          class="pb-2 mb-2 break-words border-b-1 border-slate-400"
          data-testid="pension-card-employer-name"
        >
          Employer 1
        </dd>
        <dt
          class="mb-0 font-normal text-gray-650"
        >
          common.retirement-date:
        </dt>
        <dd
          class="pb-2 mb-2 break-words border-b-1 border-slate-400"
          data-testid="pension-card-retirement-date"
        >
          1 January 2025
        </dd>
      </dl>
      <form
        class="mt-4"
        method="POST"
      >
        <input
          name="pensionId"
          type="hidden"
          value="12345"
        />
        <input
          name="locale"
          type="hidden"
          value="en"
        />
        <input
          name="pensionType"
          type="hidden"
          value="DC"
        />
        <button
          class="border-0 text-white bg-magenta-500 hover:bg-pink-800 active:bg-pink-900 active:outline-yellow-400 active:text-white t-button relative px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-400 disabled:shadow-none focus:bg-yellow-400 focus:outline-blue-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none focus:before:content-[""] focus:before:w-[calc(100%+6px)] focus:before:rounded-[0.45rem] focus:before:absolute focus:before:inset-0 focus:before:inset-x-[-3px] focus:before:inset-y-[-3px] focus:before:shadow-bottom-gray active:outline-[3px] active:outline-offset-0 active:shadow-inset active:before:content-[""] active:before:w-[calc(100%+6px)] active:before:rounded-[0.45rem] active:before:absolute active:before:inset-0 active:before:inset-x-[-3px] active:before:inset-y-[-3px] active:before:shadow-bottom-white t-primary-button w-full md:w-auto"
          data-testid="details-link"
          formaction="/api/set-pension-id"
          type="submit"
        >
          <span />
          common.details-link
          <span
            class="sr-only"
          >
             for Test Scheme
          </span>
          <span />
        </button>
      </form>
    </div>
  </div>
</div>
`;
